tests/neg/invalid-opaque.scala
package somepackage:
  opaque type TestCases: Int // error // error // error: used to crash the compiler
